--- a/tutorial/example6/index.html
+++ b/tutorial/example6/index.html
@@ -15,5 +15,6 @@
   </body>
 
   <script src="../gl-matrix.js"></script>
+  <script src="../common.js"></script>
   <script src="webgl-demo.js"></script>
 </html>
