--- a/tutorial/example7/index.html
+++ b/tutorial/example7/index.html
@@ -1,3 +1,7 @@
+<!--
+ * @Author: wang_yechao
+ * @Date: 2020-02-04 11:30:55
+ -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,5 +15,6 @@
   </body>
 
   <script src="../gl-matrix.js"></script>
+  <script src="../common.js"></script>
   <script src="webgl-demo.js"></script>
 </html>
